--- a/spotify-admin/package.json
+++ b/spotify-admin/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "get-average-color": "^0.0.6",
     "music-metadata": "^10.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "rgb-hex": "^4.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
